Camino only - Bug 382801: Ensure that the keychain cache key lasts as long as it is used. r/sr=josh